--- a/src/main/resources/templates/viewOrder.html
+++ b/src/main/resources/templates/viewOrder.html
@@ -35,7 +35,7 @@
             <td th:text="${users.name}">Chad</td>
             <td class="order-id-holder" th:text="${getOrderbyId}">12345</td>
             <td class="orderline-id-holder" th:text="${getAllOrder}">
-                <div>
+                <div class="lilNoob">
                     <h4>cupcakes:</h4>
                     <div class="cupcake-amount">amount: 5</div>
                 </div>
