--- a/src/main/resources/public/css/orderpagestyles.css
+++ b/src/main/resources/public/css/orderpagestyles.css
@@ -71,7 +71,7 @@ body{
     display: flex;
     flex-direction: column;
     background-color: #F5F5F5;
-    height: auto;
+    max-height: 100%;
     padding: 1.5rem 2rem 1.5rem 2rem;
     margin: 8px 0 8px 0;
 }
