--- a/src/main/resources/templates/orderpage.html
+++ b/src/main/resources/templates/orderpage.html
@@ -22,7 +22,9 @@
         </div>
         <div class="right-side-content">
             <p class="email" th:text="${currentUserName}">e-mail </p>
+            <a href="../checkOutPage.html" th:href="@{viewbasket}">
             <img class="" alt="basket" src="../public/images/basket.svg" th:src="@{/images/basket.svg}">
+            </a>
         </div>
     </div>
 
