--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,10 +25,9 @@
             <button class="btn logIn" type="submit" formaction="/login">Login</button>
         </form>
         <div class="signUp_LogOut">
-            <a class="btn signUp" href="createuser.html" th:href="@{createuser}" target="_parent">Create account</a>
+            <a class="signUp btn" href="createuser.html" th:href="@{createuser}" target="_parent">Create account</a>
             <button class="btn logOut" type="submit" formaction="/logout">Log Out</button>
         </div>
     </div>
-
-    </body>
-    </html>
+</body>
+</html>
