--- a/src/main/resources/public/css/orderpagestyles.css
+++ b/src/main/resources/public/css/orderpagestyles.css
@@ -64,14 +64,15 @@ header img {
 */
 
 /*------------- MAIN BODY -------------*/
-body{
+html, body {
     height: 100%;
 }
+
 .main-container {
     display: flex;
     flex-direction: column;
     background-color: #F5F5F5;
-    max-height: 100%;
+    height: 49%;
     padding: 1.5rem 2rem 1.5rem 2rem;
     margin: 8px 0 8px 0;
 }
