code cleanup and refactoring

--- a/src/main/resources/templates/createuser.html
+++ b/src/main/resources/templates/createuser.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-<header class="page">
+<header class="global-header">
     <a href="../index.html" th:href="@{/}">
         <img alt="logo" src="../public/images/CupcakeLogo.png" th:src="@{/images/CupcakeLogo.png}"/>
-        <img alt="logo" src="../public/images/headerimage.png" th:src="@{/images/lifehacklogo.png}"/>
     </a>
+    <img class="cupcakelogo" alt="logo" src="../public/images/headerimage.png" th:src="@{/images/headerimage.png}"/>
 </header>
 
 <form class="generic-form" method="post">
