code cleanup and refactoring

--- a/src/main/resources/templates/editUserBalance.html
+++ b/src/main/resources/templates/editUserBalance.html
@@ -17,7 +17,7 @@
 </header>
 
 <div class="top-section">
-    <a href="../index.html">Homepage</a>
+    <a href="../orderpage.html" th:href="${backToHomepage}">Homepage</a>
     <p>( user )</p>
 </div>
 
