code cleanup and refactoring

--- a/src/main/resources/templates/userViewPage.html
+++ b/src/main/resources/templates/userViewPage.html
@@ -16,7 +16,7 @@
   </header>
 
   <div class="top-section">
-    <a href="../orderpage.html" th:href="@{homepage}">Homepage</a>
+    <a href="../orderpage.html" th:href="@{backToHomepage}">Homepage</a>
     <p th:text="${session.currentUser.user_name}">name</p>
   </div>
 
