--- a/src/main/resources/templates/viewOrder.html
+++ b/src/main/resources/templates/viewOrder.html
@@ -17,7 +17,7 @@
 </header>
 
 <div class="top-section">
-    <a href="../orderoage" th:href="@{homepage}">Homepage</a>
+    <a href="../orderpage" th:href="@{backToHomepage}">Homepage</a>
     <p th:text="${session.currentUser.user_name}">name</p>
 </div>
 
