--- a/src/main/resources/public/css/checkoutpage.css
+++ b/src/main/resources/public/css/checkoutpage.css
@@ -7,6 +7,17 @@ main{
 
 }
 
+table{
+    margin-top: 2rem;
+}
+
+table, th, td {
+    border-collapse: collapse;
+    border: 2px solid #F0EFF0;
+    padding: 1rem;
+    text-align: center;
+}
+
 .item-container{
     width: 85%;
     padding: 0 2rem 1rem 2rem;
@@ -36,7 +47,7 @@ main{
     padding: 0 2rem 0 2rem;
 }
 
-.item-specifications div, p{
+.item-specifications div{
     display: flex;
     flex-direction: row;
     align-items: center;
