--- a/src/main/resources/templates/orderpage.html
+++ b/src/main/resources/templates/orderpage.html
@@ -8,108 +8,109 @@
 </head>
 
 <body>
-<header class="global-header">
-    <a href="../index.html" th:href="@{/}">
-        <img alt="logo" src="../public/images/CupcakeLogo.png" th:src="@{/images/CupcakeLogo.png}"/>
-    </a>
-    <img class="cupcakelogo" alt="logo" src="../public/images/headerimage.png" th:src="@{/images/headerimage.png}"/>
-</header>
-
-<div class="top-section" th:if="${session.currentUser.user_role == 'admin'}">
-    <div class="left-side-content">
-        <a class="orders-href" href="viewOrder.html" th:href="@{viewOrder}">Ordrer</a>
-        <a class="customers-href" href="userViewPage.html" th:href="@{userViewPage}">Kunder</a>
-    </div>
-    <div class="right-side-content">
-        <a href="../checkOutPage.html" th:href="@{viewbasket}">
-            <p class="email" th:text="${session.currentUser.user_name}">name </p>
-            <img class="" alt="basket" src="../public/images/basket.svg" th:src="@{/images/basket.svg}">
+    <header class="global-header">
+        <a href="../index.html" th:href="@{/}">
+            <img alt="logo" src="../public/images/CupcakeLogo.png" th:src="@{/images/CupcakeLogo.png}"/>
         </a>
-    </div>
-</div>
+        <img class="cupcakelogo" alt="logo" src="../public/images/headerimage.png" th:src="@{/images/headerimage.png}"/>
+    </header>
 
-<div class="top-section" th:if="${session.currentUser.user_role == 'user' || session.currentUser.user_role == 'null'}">
-    <div class="left-side-content">
-        <p class="email" th:text="${currentUserName}">username</p>
-    </div>
-    <div class="right-side-content">
-        <a href="../checkOutPage.html" th:href="@{viewbasket}">
-            <img class="" alt="basket" src="../public/images/basket.svg" th:src="@{/images/basket.svg}">
-        </a>
-    </div>
-</div>
-
-
-<div class="main-container">
-
-    <div class="main-container-text">
-        <h1>Velkommen ombord</h1>
-        <p class="sub-text">Øens bedste cupcakes! Vælg og bestil her:</p>
-    </div>
-
-
-    <form method="post" action="addtobasket">
-        <div class="form-container">
-            <div class="left-side">
-                <div class="dropdown-menu">
-                    <label for="bottom"></label>
-                    <select name="bottom_id" id="bottom" required>
-                        <option value="" disabled selected>Choose flavor</option>
-                        <option th:each="bottom : ${bottomsList}" th:value="${bottom.bottom_id}"
-                                th:text="${bottom.flavor}" th:data-price="${bottom.price}">
-                    </select>
-
-                    <span id="bottomPrice"></span>
-                </div>
-
-                <div class="dropdown-menu">
-                    <label for="topping"></label>
-                    <select name="topping_id" id="topping" required>
-                        <option value="" disabled selected>Choose topping</option>
-                        <option th:each="topping : ${toppingsList}" th:value="${topping.topping_id}"
-                                th:text="${topping.flavor}" th:data-price="${topping.price}">
-                    </select>
-                    <span class="sub-text" id="toppingPrice"></span>
-                </div>
-            </div>
-
-            <div class="dropdown-menu">
-                <label for="amount"></label>
-                <select name="amount" id="amount" required>
-                    <option value="" disabled selected>Vælg antal</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                </select>
-            </div>
+    <div class="top-section" th:if="${session.currentUser.user_role == 'admin'}">
+        <div class="left-side-content">
+            <a class="orders-href" href="viewOrder.html" th:href="@{viewOrder}">Ordrer</a>
+            <a class="customers-href" href="userViewPage.html" th:href="@{userViewPage}">Kunder</a>
         </div>
-        <button class="submit-btn" type="submit">Læg i kurv</button>
+        <div class="right-side-content">
+            <a href="../checkOutPage.html" th:href="@{viewbasket}">
+                <p class="email" th:text="${session.currentUser.user_name}">name </p>
+                <img class="" alt="basket" src="../public/images/basket.svg" th:src="@{/images/basket.svg}">
+            </a>
+        </div>
+    </div>
 
-    </form>
-    <p th:if="${session.cart != null}" th:text="${session.cart.getCount()}">0</p>
+    <div class="top-section" th:if="${session.currentUser.user_role == 'user' || session.currentUser.user_role == 'null'}">
+        <div class="left-side-content">
+            <p class="email" th:text="${currentUserName}">username</p>
+        </div>
+        <div class="right-side-content">
+            <a href="../checkOutPage.html" th:href="@{viewbasket}">
+                <img class="" alt="basket" src="../public/images/basket.svg" th:src="@{/images/basket.svg}">
+                <div th:if="${session.cart != null}" th:text="${session.cart.getCount()}">0</div>
+            </a>
+        </div>
+    </div>
 
-    <div><p class="error" th:unless="${#strings.isEmpty(message)}" th:text="${message}"></p></div>
-</div>
 
-<a href="index.html" th:href="@{/logout}">Logout</a>
+    <div class="main-container">
+        <div class="cart-count" th:if="${session.cart != null}" th:text="${session.cart.getCount()}">0</div>
 
-<script>
-    // JavaScript to display price when bottom or topping is selected
-    document.getElementById("bottom").addEventListener("change", function () {
-        var price = this.options[this.selectedIndex].getAttribute("data-price");
-        document.getElementById("bottomPrice").textContent = "Price: " + price;
-    });
+        <div class="main-container-text">
+            <h1>Velkommen ombord</h1>
+            <p class="sub-text">Øens bedste cupcakes! Vælg og bestil her:</p>
+        </div>
 
-    document.getElementById("topping").addEventListener("change", function () {
-        var price = this.options[this.selectedIndex].getAttribute("data-price");
-        document.getElementById("toppingPrice").textContent = "Price: " + price;
-    });
-</script>
+        <form method="post" action="addtobasket">
+            <div class="form-container">
+                <div class="left-side">
+                    <div class="dropdown-menu">
+                        <label for="bottom"></label>
+                        <select name="bottom_id" id="bottom" required>
+                            <option value="" disabled selected>Choose flavor</option>
+                            <option th:each="bottom : ${bottomsList}" th:value="${bottom.bottom_id}"
+                                    th:text="${bottom.flavor}" th:data-price="${bottom.price}">
+                        </select>
+
+                        <span id="bottomPrice"></span>
+                    </div>
+
+                    <div class="dropdown-menu">
+                        <label for="topping"></label>
+                        <select name="topping_id" id="topping" required>
+                            <option value="" disabled selected>Choose topping</option>
+                            <option th:each="topping : ${toppingsList}" th:value="${topping.topping_id}"
+                                    th:text="${topping.flavor}" th:data-price="${topping.price}">
+                        </select>
+                        <span class="sub-text" id="toppingPrice"></span>
+                    </div>
+                </div>
+
+                <div class="dropdown-menu">
+                    <label for="amount"></label>
+                    <select name="amount" id="amount" required>
+                        <option value="" disabled selected>Vælg antal</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                    </select>
+                </div>
+            </div>
+            <button class="submit-btn" type="submit">Læg i kurv</button>
+        </form>
+
+
+
+        <div><p class="error" th:unless="${#strings.isEmpty(message)}" th:text="${message}"></p></div>
+    </div>
+
+    <a href="index.html" th:href="@{/logout}">Logout</a>
+
+    <script>
+        // JavaScript to display price when bottom or topping is selected
+        document.getElementById("bottom").addEventListener("change", function () {
+            var price = this.options[this.selectedIndex].getAttribute("data-price");
+            document.getElementById("bottomPrice").textContent = "Price: " + price;
+        });
+
+        document.getElementById("topping").addEventListener("change", function () {
+            var price = this.options[this.selectedIndex].getAttribute("data-price");
+            document.getElementById("toppingPrice").textContent = "Price: " + price;
+        });
+    </script>
 </body>
 </html>
 
